--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,9 @@
     "source.fixAll.eslint": true
   },
   "cSpell.words": [
-    "diablo"
+    "ampliar",
+    "carrinho",
+    "diablo",
+    "jogo"
   ]
 }
